# get_request

./: Cargo.toml  README.md
src/: main.rs
