[package]
authors = ["Jason Leonhard <leonhard.jason@gmail.com>"]
edition = "2018"
name = "get_request"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
pretty_env_logger = "0.4.0"
tokio = {version = "0.2", features = ["full"]}
